--- a/monasca_installer/site.yml
+++ b/monasca_installer/site.yml
@@ -3,11 +3,10 @@
   tasks:
     - name: apt-get update
       apt: update_cache=yes
-  roles:
-    - role: bennojoy.network_interface
-    - {role: bennojoy.ntp, tags: [ntp]}
 
 - include: monasca_deps.yml
 - include: schema.yml
 - include: monasca.yml
+- include: agent.yml
+- include: alarms.yml
 - include: agent_status.yml
