--- a/monasca_installer/agent.yml
+++ b/monasca_installer/agent.yml
@@ -1,5 +1,5 @@
 - name: Installs the Monasca Agent
-  hosts: monasca
+  hosts: agent
   sudo: yes
   roles:
     - {role: monasca-agent, tags: [agent]}
