--- a/monasca_installer/site.yml
+++ b/monasca_installer/site.yml
@@ -8,5 +8,5 @@
 - include: schema.yml
 - include: monasca.yml
 - include: agent.yml
-- include: alarms.yml
+#- include: alarms.yml
 - include: agent_status.yml
