--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,13 @@ docs/_build/
 
 # PyBuilder
 target/
+
+# Vagrant
+.vagrant/
+
+# Generated Ansible config
+monasca_installer/ansible.cfg
+monasca_installer/group_vars/
+monasca_installer/host_vars/
+monasca_installer/hosts
+monasca_installer/monasca_config.yml
