--- a/monasca_installer/monasca_config.yaml.example
+++ b/monasca_installer/monasca_config.yaml.example
@@ -79,6 +79,12 @@ all_config:
   monasca_api_host: mon-ae1test-monasca01.useast.hpcloud.net
   # Load balanced vip for monasca_api url
   monasca_api_url: https://{{monasca_api_host}}:8080/v2.0
+
+  # if using hlinux use 
+  # percona_package: percona-xtradb-cluster-server-5.5
+  # setup_percona_repo: false  
+  percona_package: percona-xtradb-cluster-56
+  
   keystone_admin: admin
   keystone_admin_password: password
   keystone_admin_token: ADMIN
