--- a/monasca_installer/monasca_config.yaml.example
+++ b/monasca_installer/monasca_config.yaml.example
@@ -37,7 +37,7 @@
 
 # Paths used by the installed version of Horizon
 dashboard_path: /usr/share/openstack-dashboard/openstack_dashboard/
-grafana_repo_dir: /opt/grafana/
+grafana_base_dir: /opt
 grafana_dest: /usr/share/openstack-dashboard/static/grafana
 panel_dest_path: /usr/share/openstack-dashboard/monitoring
 
@@ -80,7 +80,7 @@ all_config:
   # Load balanced vip for monasca_api url
   monasca_api_url: https://{{monasca_api_host}}:8080/v2.0
 
-  # if using hlinux use 
+  # if using hlinux use:
   # percona_package: percona-xtradb-cluster-server-5.5
   # setup_percona_repo: false  
   percona_package: percona-xtradb-cluster-56
@@ -98,6 +98,38 @@ all_config:
   keystone_users:
     mini-mon: {password: password, role: monasca-user, project: "{{keystone_project}}"}
     monasca-agent: {password: password, role: monasca-agent, project: "{{keystone_project}}"}
+
+monitored_services:
+  # Hosts by service to install the monasca-agent.  One agent is installed per host.
+  # The service name is used to configure the agent to emit metrics for that service.
+  # A host having more than one service can only be listed under 'multi-service'.
+  # hostname can be the pingable domain name or ip address.
+  # Note: the monasca hosts are ignored here, since they are defined in hosts.
+  - service: monasca
+    hosts:
+      - hostname: mon-ae1test-monasca01.useast.hpcloud.net
+      - hostname: mon-ae1test-monasca02.useast.hpcloud.net
+      - hostname: mon-ae1test-monasca03.useast.hpcloud.net
+  - service: devstack
+    hosts:
+      - hostname: one
+  - service: multi-service
+    # multi-service hosts are hosts that have more than one monitored service installed
+    hosts:
+      - hostname: three
+      - hostname: four
+
+hosts:
+# The monasca hosts
+  - hostname: mon-ae1test-monasca01.useast.hpcloud.net
+    internal_ip: 10.22.156.11
+    kafka_id: 0
+  - hostname: mon-ae1test-monasca02.useast.hpcloud.net
+    internal_ip: 10.22.156.12
+    kafka_id: 1
+  - hostname: mon-ae1test-monasca03.useast.hpcloud.net
+    internal_ip: 10.22.156.13
+    kafka_id: 2
 
 #The monasca_agent for monasca
 monasca_agent:
@@ -170,35 +202,4 @@ agent_config:
     project: "{{keystone_users.monasca-agent.project}}"
     service: monitoring
 
-monitored_services:
-  # Hosts by service to install the monasca-agent.  One agent is installed per host.
-  # The service name is used to configure the agent to emit metrics for that service.
-  # A host having more than one service can only be listed under 'multi-service'.
-  # hostname can be the pingable domain name or ip address.
-  # Note: the monasca hosts are ignored here, since they are defined in hosts.
-  - service: monasca
-    hosts:
-      - hostname: mon-ae1test-monasca01.useast.hpcloud.net
-      - hostname: mon-ae1test-monasca02.useast.hpcloud.net
-      - hostname: mon-ae1test-monasca03.useast.hpcloud.net
-  - service: devstack
-    hosts:
-      - hostname: one
-  - service: multi-service
-    # multi-service hosts are hosts that have more than one monitored service installed
-    hosts:
-      - hostname: three
-      - hostname: four
-
-hosts:
-# The monasca hosts
-  - hostname: mon-ae1test-monasca01.useast.hpcloud.net
-    internal_ip: 10.22.156.11
-    kafka_id: 0
-  - hostname: mon-ae1test-monasca02.useast.hpcloud.net
-    internal_ip: 10.22.156.12
-    kafka_id: 1
-  - hostname: mon-ae1test-monasca03.useast.hpcloud.net
-    internal_ip: 10.22.156.13
-    kafka_id: 2
 
