Added the default alarms role

--- a/requirements.yml
+++ b/requirements.yml
@@ -4,6 +4,8 @@
   name: monasca-agent
 - src: tkuhlman.monasca-api
   name: monasca-api
+- src: https://github.com/hpcloud-mon/ansible-monasca-default-alarms
+  name: monasca-default-alarms
 - src: tkuhlman.monasca-keystone
   name: monasca-keystone
 - src: tkuhlman.monasca-notification
