Adapted Keystone user definition in example configuration
Changes required due to
hpcloud-mon/ansible-monasca-keystone@82c01b122dc9e844b5c227db79afbec6d9a60215

--- a/monasca_installer/vagrant_config.yml
+++ b/monasca_installer/vagrant_config.yml
@@ -96,8 +96,14 @@ all_config:
   keystone_monasca_agent_password: password
   keystone_url: http://{{keystone_host}}:35357/v3
   keystone_users:
-    mini-mon: {password: "{{keystone_project_admin_password}}", role: monasca-user, project: "{{keystone_project}}"}
-    monasca-agent: {password: "{{keystone_monasca_agent_password}}", role: monasca-agent, project: "{{keystone_project}}"}
+    - username: mini-mon
+      password: "{{keystone_project_admin_password}}"
+      role: monasca-user
+      project: "{{keystone_project}}"
+    - username: monasca-agent
+      password: "{{keystone_monasca_agent_password}}"
+      role: monasca-agent
+      project: "{{keystone_project}}"
 
 monitored_services:
   # Hosts by service to install the monasca-agent.  One agent is installed per host.
