--- a/monasca_installer/vagrant_config.yml
+++ b/monasca_installer/vagrant_config.yml
@@ -146,7 +146,7 @@ wsrep_node_name: '{{inventory_hostname}}'
 wsrep_sst_receive_address: '{{inventory_hostname}}'
 
 influxdb_replication_factor: 3
-influxdb_version: 0.9.0-rc
+influxdb_version: 0.9.0-rc27
 influxdb_raft_port: 9090
 influxdb_hostname: "{{ inventory_hostname }}"
 
