changes for python api and persister, and for cassandra
Add these variables to the command line ansible-playbook command
-e database_type=cassandra
-e monasca_persister_java=false
-e monasca_api_java=false

--- a/monasca_installer/agent_status.yml
+++ b/monasca_installer/agent_status.yml
@@ -3,7 +3,7 @@
   gather_facts: no
   tasks:
     - name: Run monasca-collector info to find any problems on the host
-      command: monasca-collector info
+      command: "{{ monasca_virtualenv_dir }}/bin/monasca-collector info"
       register: info_result
     - debug: var=info_result
       when: info_result |failed
