--- a/monasca_installer/site.yml
+++ b/monasca_installer/site.yml
@@ -1,6 +1,9 @@
 - hosts: monasca
   sudo: yes
   tasks:
+    - name: Check for database_type
+      fail: msg="Must set database type when running this playbook. To pass via command line use -e."
+      when: database_type is not defined
     - name: apt-get update
       apt: update_cache=yes
 
